# mylittleindicators

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
crates/mli-collector/: Cargo.toml  README.md  collector.toml.example  validator_report.json
crates/mli-collector/smoke_data/: smoke_report.json
crates/mli-collector/src/: config.rs  lib.rs  main.rs  subscriber.rs  writer.rs
crates/mli-collector/tests/: config_parse.rs
crates/mli-validator/: Cargo.toml
docs/: architecture.md
docs/plans/: primitives-roadmap.md
src/: lib.rs
src/bar_indicators/: agg_trade_consumer.rs  auction_event_consumer.rs  bar_indicator_id.rs  basis_consumer.rs  block_trade_consumer.rs  composite_index_consumer.rs  funding_rate_consumer.rs  funding_settlement_consumer.rs  granularity.rs  historical_volatility_consumer.rs  hybrid_tick_book_consumer.rs  index_price_consumer.rs  indicator_value.rs  instance_factory.rs  insurance_fund_consumer.rs  liquidation_consumer.rs  long_short_ratio_consumer.rs  mark_price_consumer.rs  market_warning_consumer.rs  mod.rs  ohlcv_field.rs  open_interest_consumer.rs  option_greeks_consumer.rs  order_book_consumer.rs  orderbook_delta_consumer.rs  orderbook_l3_consumer.rs  predicted_funding_consumer.rs  risk_limit_consumer.rs  settlement_event_consumer.rs  tick_consumer.rs  ticker_consumer.rs  volatility_index_consumer.rs
src/bar_indicators/accumulation/: accumulation_catalog.rs  accumulation_distribution.rs  accumulative_swing_index.rs  chaikin_money_flow.rs  chaikin_oscillator.rs  demand_index.rs  ease_of_movement.rs  force_index.rs  intraday_intensity.rs  intraday_intensity_percent.rs  intraday_intensity_ratio.rs  mod.rs  tmf.rs  williams_ad.rs
src/bar_indicators/adaptive/: adaptive_catalog.rs  adaptive_moving_average.rs  frama.rs  kaufman_adaptive_ma.rs  mesa_adaptive_ma.rs  mod.rs  vidya.rs
src/bar_indicators/average/: alma.rs  ama.rs  average_catalog.rs  dema.rs  ehlers_fractal_adaptive_ma.rs  ehlers_zero_lag_ema.rs  ema.rs  frama.rs  frama_advanced.rs  hma.rs  jurik_ma.rs  lr.rs  mcginley_dynamic.rs  mod.rs  moving_average.rs  rma.rs  sma.rs  t3.rs  tema.rs  tma.rs  trima.rs  vidya.rs  vwap.rs  vwma.rs  wma.rs
src/bar_indicators/book/: book_catalog.rs  book_churn_rate.rs  book_depth_change.rs  book_pressure.rs  hidden_liquidity_detector.rs  iceberg_detector.rs  imbalance.rs  level_replenishment_rate.rs  liquidity_sweep.rs  microprice.rs  mod.rs  order_book_velocity.rs  spread_distribution.rs  sweep_impact_analyzer.rs  trade_book_absorption.rs  wall_detector.rs
src/bar_indicators/book_advanced/: best_level_volatility.rs  bid_ask_asymmetry.rs  bid_ask_bounce_rate.rs  book_advanced_catalog.rs  layer_concentration.rs  mid_price_velocity.rs  mod.rs  price_level_density.rs
src/bar_indicators/candles/: candle_anatomy.rs  candles_catalog.rs  heikin_ashi.rs  mod.rs  pattern_recognition.rs  sfp_detector.rs  wick_spike.rs
src/bar_indicators/channels/: adaptive_bollinger_bands.rs  adaptive_channels.rs  atr_channels.rs  bollinger_bands.rs  bollinger_metrics.rs  channels_catalog.rs  darvas_box.rs  donchian_channel.rs  donchian_channel_metrics.rs  donchian_position.rs  donchian_width.rs  dpo_bands.rs  envelope_bandwidth.rs  envelope_channels.rs  fibonacci_channels.rs  ichimoku_cloud.rs  ichimoku_cloud_position.rs  ichimoku_cloud_thickness.rs  keltner_bandwidth.rs  keltner_channel.rs  keltner_channel_metrics.rs  keltner_distance.rs  keltner_position.rs  median_channel_position.rs  median_channels.rs  mod.rs  percent_b.rs  percentile_channels.rs  pivot_channels.rs  price_channel_oscillator.rs  price_channel_width.rs  price_channels.rs  projection_bands.rs  quantile_regression_channels.rs  regression_channel_width.rs  regression_channels.rs  standard_deviation_channels.rs  starc_bands.rs  stddev_channel_width.rs  theil_sen_channels.rs  (+4 more)
src/bar_indicators/chaos/: chaos_catalog.rs  chaos_oscillator.rs  dfa.rs  dfa_percentile.rs  fractal_dimension.rs  hurst_exponent.rs  hurst_percentile.rs  mod.rs  williams_fractals.rs  williams_indicators.rs
src/bar_indicators/clusters/: absorption_detector.rs  clusters_catalog.rs  footprint_chart.rs  footprint_imbalance.rs  footprint_poc.rs  market_microstructure.rs  mod.rs  order_book_slope.rs  order_flow_imbalance.rs  queue_imbalance.rs  tick_volume_analyzer.rs  trade_cluster_detector.rs  volume_weighted_price_levels.rs
src/bar_indicators/composites/: adaptive_threshold.rs  adaptive_window_selector.rs  block_trade_volume_ratio.rs  capitulation_detector.rs  composites_catalog.rs  compound_squeeze_probability.rs  cross_asset_beta.rs  funding_oi_pressure.rs  funding_sentiment_alignment.rs  index_tracking_error.rs  iv_hv_spread.rs  market_stress_composite.rs  mod.rs  pairs_cointegration_proxy.rs  relative_strength_cross.rs  risk_off_detector.rs  sentiment_composite.rs  squeeze_probability.rs  vol_regime_entry.rs
src/catalog/: indicator_key.rs  indicator_signature.rs  mod.rs  parameter_grid.rs  rendering_catalog.rs  rendering_tests.rs  synthetic_data.rs  unified.rs  unified_catalog.rs  value_adapter.rs
src/core/: mod.rs
src/data_loader/: data_source.rs  dig3_rest_fetcher.rs  enriched_history.rs  enriched_loader.rs  exchange_hub_fetcher.rs  mod.rs  rest_fetcher.rs  storage.rs  stream_kind.rs  timed_event.rs  timeline_merger.rs
src/events/: bos_event_detector.rs  breakout.rs  candle_pattern.rs  confluence.rs  cross_asset_beta.rs  crossover.rs  direction_detector.rs  divergence.rs  event_at_level.rs  event_config.rs  event_id.rs  event_instance.rs  events_catalog.rs  fvg_event_detector.rs  line_cross.rs  mod.rs  oscillator_with_divergence.rs  oscillator_with_volume_weight.rs  pairs_cointegration_proxy.rs  pivot.rs  price_line_cross.rs  regime_gate.rs  relative_position.rs  relative_strength_cross.rs  statistical_wick_detector.rs  swing_detection.rs  threshold.rs  volatility_regime.rs  volume_event.rs  zone_enter.rs  zone_exit.rs
src/signals/: catalog.rs  conditions.rs  detectors.rs  mod.rs  signal.rs
src/strategies/: mod.rs  spec.rs
src/types/: bar.rs  mod.rs  timeframe.rs
(+620 files in other folders)
