[package]
name = "mylittleindicators"
version = "0.1.1"
edition = "2024"
description = "Multi-stream financial indicators library — 559 bar indicators + 21 event primitives across 35 categories. Consumes OHLCV bars, ticks, orderbook (snapshot/delta), funding, mark price, open interest, liquidations, ticker, agg trades, and 12+ extended stream types from digdigdig3 exchange connectors."
license = "MIT"
readme = "README.md"
repository = "https://github.com/ZENG3LD/mylittleindicators"
keywords = ["indicators", "trading", "technical-analysis", "orderbook", "market-data"]
categories = ["finance", "api-bindings"]

[dependencies]
digdigdig3 = "=0.3.10"
async-trait = "0.1"
once_cell = "1.21"
arrayvec = "0.7"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Codegen-only: TokenStream support for StrategySpec::extra_decls. Lightweight
# (no proc-macro infrastructure). Used only by mlq-strategies-codegen and
# similar users; chart/alerts code can drop it as a feature.
proc-macro2 = "1"

