[package]
name = "mylittleindicators"
version = "0.1.8"
edition = "2024"
description = "Multi-stream financial indicators library — 556 bar indicators + 21 event primitives across 35 categories. Consumes 27 stream kinds from digdigdig3 exchange connectors: OHLCV bars, ticks, orderbook (snapshot/delta/L3), funding/predicted funding/funding settlement, mark price, index price, open interest, liquidations, ticker, agg trades, long/short ratio, option greeks, volatility index, historical volatility, basis (derived), composite index, settlement events, block trades, insurance fund, risk limit, market warning, and three kline-family variants. Live-verified on 12 exchanges (89% pass-rate on a 150s BTC slice)."
license = "MIT"
readme = "README.md"
repository = "https://github.com/ZENG3LD/mylittleindicators"
keywords = ["indicators", "trading", "technical-analysis", "orderbook", "market-data"]
categories = ["finance", "api-bindings"]

[dependencies]
digdigdig3-core = "=0.3.23"
once_cell = "1.21"
# EnumIter derive on BarIndicatorId/EventId — single source of truth for "all
# variants". Lightweight, no proc-macro runtime cost; replaces hand-maintained
# ID lists in downstream consumers (mlq codegen).
strum = { version = "0.27", features = ["derive"] }
arrayvec = "0.7"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }

# Codegen-only: TokenStream support for StrategySpec::extra_decls. Lightweight
# (no proc-macro infrastructure). Used only by mlq-strategies-codegen and
# similar users; chart/alerts code can drop it as a feature.
proc-macro2 = "1"

