[package]
name = "mli-collector"
version = "0.1.0"
edition = "2021"

[lib]
name = "mli_collector_lib"
path = "src/lib.rs"

[[bin]]
name = "mli-collector"
path = "src/main.rs"

[dependencies]
mylittleindicators = { path = "../.." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"

# digdigdig3 = { path = "../../../digdigdig3" }  — future integration; see feature flag below

[features]
default = []
# Placeholder for future digdigdig3 WS subscriber integration.
digdigdig3-integration = []
