[package]
name = "mli-collector"
version = "0.1.0"
edition = "2021"

[lib]
name = "mli_collector_lib"
path = "src/lib.rs"

[[bin]]
name = "mli-collector"
path = "src/main.rs"

[[bin]]
name = "mli-collector-smoke"
path = "src/bin/smoke.rs"

[[bin]]
name = "mli-collector-indicator-validator"
path = "src/bin/indicator_validator.rs"

[dependencies]
mylittleindicators = { path = "../.." }
digdigdig3 = "=0.3.9"
digdigdig3-station = { path = "../../../digdigdig3/crates/digdigdig3-station" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
futures-util = "0.3"

[patch.crates-io]
digdigdig3 = { path = "../../../digdigdig3/crates/digdigdig3" }
