[package]
name = "mli-validator"
version = "0.1.0"
edition = "2024"
description = "Live indicator/event validator harness for mylittleindicators — dev-only diagnostic tool, not published."
license = "MIT"
publish = false

[[bin]]
name = "mli-validator"
path = "src/bin/indicator_validator.rs"

[dependencies]
mylittleindicators = { path = "../.." }
digdigdig3 = "=0.3.13"
digdigdig3-station = { path = "../../../digdigdig3/crates/digdigdig3-station" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
futures-util = "0.3"
rust_decimal = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[patch.crates-io]
digdigdig3 = { path = "../../../digdigdig3/crates/digdigdig3" }
